--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -3,15 +3,18 @@ name: Daily Official Data Monitor
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 2 * * *"   # runs daily at 02:15 UTC
+    - cron: "15 2 * * *" # daily at 02:15 UTC
 
 permissions:
   contents: write
 
+concurrency:
+  group: daily-official-data-monitor
+  cancel-in-progress: false
+
 jobs:
   monitor:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,15 +29,18 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run monitoring pipeline
+      - name: Run scientific acquisition (src/main.py)
         run: |
-          echo "AUTO DZ ACT – monitoring placeholder"
-          date -u > last_run_utc.txt
+          python src/main.py
+
+      - name: Record run timestamp
+        run: |
+          date -u +"%Y-%m-%dT%H:%M:%SZ" > last_run_utc.txt
 
       - name: Commit outputs
         run: |
           git config user.name "auto-dz-act-bot"
-          git config user.email "actions@users.noreply.github.com"
-          git add last_run_utc.txt || true
-          git commit -m "Daily update: official data check" || true
+          git config user.email "actions@github.com"
+          git add -A
+          git commit -m "Daily scientific data update (automated)" || true
           git push
