--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -16,8 +16,10 @@ jobs:
   monitor:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repository (full history for rebase)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -37,15 +39,15 @@ jobs:
         run: |
           date -u +"%Y-%m-%dT%H:%M:%SZ" > last_run_utc.txt
 
-      - - name: Commit outputs
-  run: |
-    git config user.name "auto-dz-act-bot"
-    git config user.email "actions@github.com"
+      - name: Commit outputs safely (rebase then push)
+        run: |
+          git config user.name "auto-dz-act-bot"
+          git config user.email "actions@github.com"
 
-    git fetch origin main
-    git pull --rebase origin main
+          # Sync with remote to avoid "fetch first" rejection
+          git pull --rebase origin main
 
-    git add -A
-    git commit -m "Daily scientific data update (automated)" || true
+          git add -A
+          git commit -m "Daily scientific data update (automated)" || true
 
-    git push origin main
+          git push origin HEAD:main
