--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -15,11 +15,10 @@ concurrency:
 jobs:
   monitor:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository (full history for rebase)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    - name: Checkout repository (full history)
+  uses: actions/checkout@v4
+  with:
+    fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
