--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -36,18 +36,13 @@ jobs:
         run: |
           python src/main.py
 
-      - name: Record run timestamp
-        run: |
-          date -u +"%Y-%m-%dT%H:%M:%SZ" > last_run_utc.txt
+      -name: Commit outputs safely
+  run: |
+    git config user.name "auto-dz-act-bot"
+    git config user.email "actions@github.com"
 
-      - name: Commit outputs safely
-        run: |
-          git config user.name "auto-dz-act-bot"
-          git config user.email "actions@github.com"
+    git add -A
 
-          git pull --rebase origin main
+    git commit -m "Daily scientific data update (automated)" || echo "Nothing to commit"
 
-          git add -A
-          git commit -m "Daily scientific data update (automated)" || true
-
-          git push origin HEAD:main
+    git push origin main
