Fix daily workflow (safe sync + commit)
Pull/rebase before generating files; avoid push-trigger loops; commit only when changes exist

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -14,6 +14,8 @@ concurrency:
 
 jobs:
   monitor:
+    # يمنع أي تشغيل سببه push (حتى لا تدخل في حلقة commits)
+    if: github.event_name != 'push'
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +23,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Sync with remote (before generating files)
+        run: |
+          git config user.name "auto-dz-act-bot"
+          git config user.email "actions@github.com"
+          git pull --rebase origin main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -32,17 +40,23 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run scientific acquisition
+      - name: Run scientific acquisition (src/main.py)
         run: |
           python src/main.py
 
-      -name: Commit outputs safely
-  run: |
-    git config user.name "auto-dz-act-bot"
-    git config user.email "actions@github.com"
+      - name: Record run timestamp
+        run: |
+          date -u +"%Y-%m-%dT%H:%M:%SZ" > last_run_utc.txt
 
-    git add -A
+      - name: Commit and push outputs
+        run: |
+          git add -A
 
-    git commit -m "Daily scientific data update (automated)" || echo "Nothing to commit"
+          # إذا لم تتغير أي ملفات، لا تعمل commit ولا تفشل المهمة
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
 
-    git push origin main
+          git commit -m "Daily scientific data update (automated)"
+          git push origin HEAD:main
