--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: "15 2 * * *"   # daily at 02:15 UTC
   push:
-    branches: ["main"]
+    branches: [ "main" ]
     paths-ignore:
       - "data/**"
       - "last_run_utc.txt"
@@ -27,22 +27,37 @@ jobs:
         with:
           fetch-depth: 0
 
+      # Sync early while working tree is clean (safe)
+      - name: Sync with remote main (clean)
+        shell: bash
+        run: |
+          set -e
+          git fetch origin main
+          git checkout main
+          git pull --rebase origin main
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install dependencies
+        shell: bash
         run: |
+          set -e
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run scientific acquisition
+        shell: bash
         run: |
+          set -e
           python src/main.py
 
       - name: Record run timestamp
+        shell: bash
         run: |
+          set -e
           date -u +"%Y-%m-%dT%H:%M:%SZ" > last_run_utc.txt
 
       - name: Commit outputs safely
@@ -60,6 +75,17 @@ jobs:
             exit 0
           fi
 
-          git pull --rebase origin main
           git commit -m "Daily scientific data update (automated)"
-          git push origin HEAD:main
+
+          # Push; if rejected because remote moved, rebase then push again.
+          for i in 1 2 3; do
+            if git push origin HEAD:main; then
+              echo "Push succeeded."
+              exit 0
+            fi
+            echo "Push rejected (remote updated). Rebasing and retrying..."
+            git pull --rebase origin main
+          done
+
+          echo "Push failed after retries."
+          exit 1
